--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input":"src/homi-theme.scss"
+              },
               "src/styles.scss"
             ],
             "scripts": [],
